--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -390,18 +390,25 @@ header {
 	#vinyl-wrapper {
 		position: relative;
 		background-image: url("https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg");
-  		background-size: cover;
-  		background-position: center; 
+		background-size: cover;
+		background-position: center;
 		width: 25rem;
 		height: 25rem;
+		z-index: 2;
 	}
 	#vinyl {
 		position: absolute;
 		max-height: 100%;
 		max-width: 100%;
-		right: 50%;
-		transform: translateX(-50%);
+		left: 100%;
 		animation: disc_spin 3.5s linear infinite;
+		z-index: 1;
+	}
+	#latest-single-vinyl-pic {
+		position: absolute;
+		left: 100%;
+		animation: disc_spin 3.5s linear infinite;
+		z-index: 0;
 	}
 }
 
