--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -380,12 +380,8 @@ header {
 }
 #latest-single #vinyl-wrapper {
   position: relative;
-  background-image: url("https://nuwera.band/wp-content/uploads/2024/09/Groundless-Square-375x375.jpg");
-  background-size: cover;
-  background-position: center;
   width: 25rem;
   height: 25rem;
-  z-index: 2;
 }
 #latest-single #vinyl {
   position: absolute;
@@ -402,6 +398,11 @@ header {
   left: 100%;
   animation: disc_spin_2 3.5s linear infinite;
   z-index: 0;
+}
+#latest-single #latest-single-vinyl-large-pic {
+  width: 25rem;
+  height: 25rem;
+  z-index: 2;
 }
 
 @keyframes disc_spin {
