--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -391,6 +391,8 @@ header {
 		position: relative;
 		width: 25rem;
 		height: 25rem;
+		right: 15rem;
+		transform: translateX(-50%);
 	}
 	#vinyl {
 		position: absolute;
@@ -409,6 +411,7 @@ header {
 		z-index: 0;
 	}
 	#latest-single-vinyl-large-pic{
+		position: relative;
 		width: 25rem;
 		height: 25rem;
 		z-index: 2;
