--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -416,6 +416,12 @@ header {
 		height: 25rem;
 		z-index: 2;
 	}
+
+	#latest-single-second-col{
+		#latest-single-second-col-title{
+			word-wrap: break-word;
+		}
+	}
 }
 
 @keyframes disc_spin {
