--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -339,6 +339,7 @@ header {
 	}
 }
 
+
 #latest-single {
 	height: 100dvh;
 	background-color: #1b1b1b;
@@ -475,6 +476,12 @@ header {
 		}
 	}
 }
+
+#about-us{
+	height: 100dvh;
+	background-color: #1b1b1b;
+}
+
 .meet-the-band {
 	background-color: #121925;
 	img {
