--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -461,6 +461,11 @@ header {
   color: #fff;
 }
 
+#about-us {
+  height: 100dvh;
+  background-color: #1b1b1b;
+}
+
 .meet-the-band {
   background-color: #121925;
 }
