--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -483,6 +483,13 @@ header {
 	img{
 		width: 100%;
 	}
+	h2{
+		text-transform: uppercase;
+		word-wrap: break-word;
+		font-size: 48px;
+		line-height: 1.3;
+		font-family: $albert-extra-bold;
+	}
 }
 
 .meet-the-band {
