--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -483,12 +483,20 @@ header {
 	img{
 		width: 100%;
 	}
-	h2{
+	h2,h3,h4{
 		text-transform: uppercase;
+	}
+	h2,h4{
+		color: #ebe2d0;
+		font-family: $albert-extra-bold;
+	}
+	h2{
 		word-wrap: break-word;
 		font-size: 48px;
 		line-height: 1.3;
-		font-family: $albert-extra-bold;
+	}
+	h4{
+		font-size: 32px;
 	}
 }
 
