--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -347,6 +347,19 @@ header {
 	p {
 		color: #ebe2d0;
 	}
+	h2,h3{
+		text-transform: uppercase;
+	}
+	h2{
+		color: #ff2b59;
+		font-family: 'Albert Extrabold';
+	}
+	h3{
+		word-wrap: break-word;
+		font-size: 60px;
+		line-height: 0.9;
+		font-family: $albert-extra-bold;
+	}
 	p {
 		font-size: 15px;
 		font-family: $gabarito-regular;
@@ -414,12 +427,6 @@ header {
 	}
 
 	#latest-single-second-col{
-		#latest-single-second-col-title{
-			word-wrap: break-word;
-			font-size: 60px;
-			line-height: 0.9;
-			font-family: $albert-extra-bold;
-		}
 	}
 }
 
@@ -494,6 +501,9 @@ header {
 		word-wrap: break-word;
 		font-size: 48px;
 		line-height: 1.3;
+	}
+	h3{
+		font-size: 89px;
 	}
 	h4{
 		font-size: 32px;
