--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -345,7 +345,6 @@ header {
 }
 #latest-single h2 {
   color: #ff2b59;
-  font-family: "Albert Extrabold";
 }
 #latest-single h3 {
   word-wrap: break-word;
@@ -488,6 +487,7 @@ header {
 }
 #about-us h3 {
   font-size: 89px;
+  color: #ff2b59;
 }
 #about-us h4 {
   font-size: 32px;
