--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -352,7 +352,6 @@ header {
 	}
 	h2{
 		color: #ff2b59;
-		font-family: 'Albert Extrabold';
 	}
 	h3{
 		word-wrap: break-word;
@@ -504,6 +503,7 @@ header {
 	}
 	h3{
 		font-size: 89px;
+		color: #ff2b59;
 	}
 	h4{
 		font-size: 32px;
