--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -621,6 +621,11 @@ footer {
 		margin-bottom: 10px;
 	}
 
+	.social-share ul li a:hover{
+		background-color: #fff;
+		color: #000;
+	}
+
 	.social-share ul li a span{
 		display: none;
 	}
