--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -497,6 +497,9 @@ header {
   font-family: "Gabarito-Regular";
   font-size: 15px;
 }
+#about-us svg {
+  fill: #EBE2D0;
+}
 
 .meet-the-band {
   background-color: #121925;
