add font heaters

--- a/inc/assets/sass/_variables.scss
+++ b/inc/assets/sass/_variables.scss
@@ -57,3 +57,4 @@ $albert-extra-bold: 				"AlbertSans-ExtraBold";
 $poppins-regular: 					"Poppins-Regular";
 $gabarito-regular:					"Gabarito-Regular";
 $gabarito-bold:						"Gabarito-Bold";
+$heaters:							"heaters";
