--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -360,13 +360,13 @@ header {
 	}
 	p {
 		font-size: 15px;
-		font-family: $gabarito-regular;
+		font-family: $poppins-regular;
 		margin-top: 0;
 		margin-bottom: 1.88em;
 	}
 	a {
 		background-color: #ff2b59;
-		font-family: $gabarito-bold;
+		font-family: $poppins-regular;
 		color: #ffffff;
 		font-size: 14px;
 		padding: 10px 32px;
