--- a/style.css
+++ b/style.css
@@ -222,3 +222,11 @@ th {
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: "heaters";
+	src: url("./inc/assets/fonts/heaters.woff") format("woff"),
+	 url("./inc/assets/fonts/heaters.woff2") format("woff2");
+	font-weight: normal;
+	font-style: normal;
+}
