--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -515,12 +515,13 @@ header {
 	p{
 		font-family: $poppins-regular;
 		font-size: 15px;
+		line-height: 1.8;
 	}
 	ul{
 		li{
 			display: inline; 
-			margin-left: 0.5rem;
-			margin-right: 0.5rem;
+			margin-left: 0.8rem;
+			margin-right: 0.8rem;
 		}
 	}
 	svg{
