--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -414,7 +414,7 @@ header {
   height: 25rem;
   z-index: 2;
 }
-#latest-single ul li {
+#latest-single ul {
   display: flex;
   flex-wrap: wrap;
 }
