--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -359,12 +359,17 @@ header {
   margin-top: 0;
   margin-bottom: 1.88em;
 }
+#latest-single ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 #latest-single a {
+  display: inline-block;
   background-color: #ff2b59;
   font-family: "Poppins-Regular";
   color: #ffffff;
   font-size: 14px;
-  padding: 10px 32px;
+  padding: 8px 30px;
 }
 #latest-single a:hover {
   background-color: #ebe2d0;
@@ -414,6 +419,7 @@ header {
   height: 25rem;
   z-index: 2;
 }
+
 @keyframes disc_spin {
   0% {
     transform: translateX(-50%) rotate(0deg);
