--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -404,8 +404,8 @@ header {
 		position: relative;
 		width: 25rem;
 		height: 25rem;
-		right: 15rem;
-		transform: translateX(-50%);
+		// right: 15rem;
+		// transform: translateX(-50%);
 	}
 	#vinyl {
 		position: absolute;
