--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -416,6 +416,7 @@ header {
   width: 30vw;
   height: 30vw;
   z-index: 2;
+  box-shadow: 0 10px 3px -9px rgba(0, 0, 0, 0.77);
 }
 
 @keyframes disc_spin {
