--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -392,13 +392,13 @@ header {
 }
 #latest-single #vinyl-wrapper {
   position: relative;
-  width: clamp(auto, 30vw, 30rem);
-  height: clamp(auto, 30vw, 30rem);
+  width: clamp(10rem, 30vw, 30rem);
+  height: clamp(10rem, 30vw, 30rem);
 }
 #latest-single #vinyl {
   position: absolute;
-  width: clamp(auto, 30vw, 30rem);
-  height: clamp(auto, 30vw, 30rem);
+  width: clamp(10rem, 30vw, 30rem);
+  height: clamp(10rem, 30vw, 30rem);
   left: 90%;
   animation: disc_spin 3.5s linear infinite;
   z-index: 1;
@@ -413,8 +413,8 @@ header {
 }
 #latest-single #latest-single-vinyl-large-pic {
   position: relative;
-  width: clamp(auto, 30vw, 30rem);
-  height: clamp(auto, 30vw, 30rem);
+  width: clamp(10rem, 30vw, 30rem);
+  height: clamp(10rem, 30vw, 30rem);
   z-index: 2;
   box-shadow: 0 10px 3px -9px rgba(0, 0, 0, 0.77);
 }
