--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -350,7 +350,9 @@ header {
 		text-transform: uppercase;
 	}
 	h2{
-		font-size: 100px;
+		//fix font size when font is fixed
+		// font-size: 100px;
+		font-size: 50px;
 		color: #ff2b59;
 		font-family: $heaters;
 	}
