--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -476,7 +476,9 @@ header {
 }
 #about-us img {
   width: 70%;
-  height: auto;
+  height: 90%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #about-us h2, #about-us h3, #about-us h4 {
   text-transform: uppercase;
