--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -492,7 +492,8 @@ header {
 	background-color: #1b1b1b;
 	img{
 		width: 70%;
-		height: auto;
+		height: 90%;
+		object-fit: cover;
 	}
 	h2,h3,h4{
 		text-transform: uppercase;
