--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -487,10 +487,13 @@ header {
 #about-us{
 	background-color: #1b1b1b;
 	img{
+		position: absolute;
 		width: 70%;
-		height: 90%;
+		// height: 90%;
 		object-fit: cover;
-		transform: translateY(calc(var(--scroll) * -10%));
+		// transform: translateY(calc(var(--scroll) * -10%));
+		
+		transform: scale(calc(1 + var(--about-us-scroll) / 2));
 	}
 	h2,h3,h4{
 		text-transform: uppercase;
