--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -334,7 +334,7 @@ header {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-		transform: scale(calc(1 + var(--scroll) / 2));
+		transform: scale(calc(1 + var(--nuwera-scroll) / 2));
 		z-index: 0;
 	}
 }
