--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -328,7 +328,7 @@ header {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  transform: scale(calc(1 + var(--scroll) / 2));
+  transform: scale(calc(1 + var(--nuwera-scroll) / 2));
   z-index: 0;
 }
 
