--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -335,6 +335,7 @@ header {
 		height: 100%;
 		object-fit: cover;
 		transform: scale(calc(1 + var(--scroll) / 2));
+		transition: transform 0.2s ease-out;
 		z-index: 0;
 	}
 }
