--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -329,7 +329,7 @@ header {
   -o-object-fit: cover;
      object-fit: cover;
   transform: scale(calc(1 + var(--scroll) / 2));
-  transition: transform 0.2s ease-out;
+  transition: transform 0.1s linear 0s;
   z-index: 0;
 }
 
@@ -476,11 +476,12 @@ header {
   background-color: #1b1b1b;
 }
 #about-us img {
-  position: absolute;
   width: 70%;
+  height: 90%;
   -o-object-fit: cover;
      object-fit: cover;
-  transform: scale(calc(1 + var(--about-us-scroll) / 2));
+  transform: scale(calc(1 + var(--about-us-scroll) / 5));
+  transition: transform 0.1s linear 0s;
 }
 #about-us h2, #about-us h3, #about-us h4 {
   text-transform: uppercase;
