--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -309,7 +309,7 @@ header {
 
 #home {
   height: 100dvh;
-  background-color: #121925;
+  background-color: #1b1b1b;
   position: relative;
   overflow: hidden;
 }
