--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -315,6 +315,9 @@ header {
 }
 #home #nuwera-logo {
   position: absolute;
+  max-width: 500px;
+  width: 100%;
+  height: auto;
   top: 35%;
   left: 50%;
   transform: translateX(-50%);
