--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -1,4 +1,10 @@
 @media (max-width: 767px) {
+  #home {
+    height: 30dvh;
+  }
+  #home #nuwera-logo {
+    width: 80%;
+  }
   .shop-now {
     padding: 8rem;
   }
@@ -25,4 +31,4 @@
   footer a {
     font-size: 0.85rem;
   }
-}
+}/*# sourceMappingURL=responsive.css.map */
