--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -374,13 +374,15 @@ header {
 		display: flex;
 		flex-wrap: wrap;
 	}
+	li{
+		background-color: #ff2b59;
+		padding: 8px 30px;
+	}
 	a {
 		display: inline-block;
-		background-color: #ff2b59;
 		font-family: $poppins-regular;
 		color: #ffffff;
 		font-size: 14px;
-		padding: 8px 30px;
 	}
 	a:hover {
 		background-color: #ebe2d0;
