--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -380,7 +380,9 @@ header {
 	}
 	li:hover {
 		background-color: #ebe2d0;
-		color: #121925;
+		a{
+			color: #121925;
+		}
 	}
 	a {
 		display: inline-block;
