--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -5,6 +5,14 @@
 }
 
 @media (max-width: 1199px) {
+    #latest-single{
+        h3{
+            font-size: 50px;
+        }
+        h2{
+            font-size: 80px;
+        }
+    }
 }
 
 @media screen and (max-width: 991px) {
