--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -1,6 +1,14 @@
-@media (max-width: 1199px) {
+@media (max-width: 1359px) {
   #latest-single h3 {
     font-size: 50px;
+  }
+  #latest-single h2 {
+    font-size: 90px;
+  }
+}
+@media (max-width: 1199px) {
+  #latest-single h3 {
+    font-size: 45px;
   }
   #latest-single h2 {
     font-size: 80px;
