--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -24,6 +24,11 @@
 }
 
 @media screen and (max-width: 991px) {
+    #latest-single{
+        li{
+            width: 100%;
+        }
+    }
 }
 
 @media (max-width: 767px) {
