--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -18,6 +18,9 @@
   #latest-single li {
     width: 100%;
   }
+  #latest-single #vinyl-wrapper {
+    justify-content: center !important;
+  }
 }
 @media (max-width: 767px) {
   #home {
