--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -28,6 +28,9 @@
         li{
             width: 100%;
         }
+        #vinyl-wrapper{
+            justify-content: center !important;
+        }
     }
 }
 
