--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -25,6 +25,12 @@
 
 @media screen and (max-width: 991px) {
     #latest-single{
+        h3{
+            font-size: 40px;
+        }
+        h2{
+            font-size: 70px;
+        }
         li{
             width: 100%;
         }
