--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -44,6 +44,15 @@
             width: 80%;
         }   
     }
+    
+    #latest-single{
+        h3{
+            font-size: 35px;
+        }
+        h2{
+            font-size: 60px;
+        }
+    }
 
     .shop-now{
         padding: 8rem;
