--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -315,6 +315,13 @@ header {
 	color: #ffffff;
 }
 
+#header{
+	ul{
+		text-align: center;
+		color: #ffffff;
+	}
+}
+
 #home {
 	height: 100dvh;
 	background-color: #1b1b1b;
