--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -310,10 +310,11 @@ header {
 #header ul {
   text-align: center;
   color: #ffffff;
+  font-size: 14px;
 }
 #header ul li {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
   font-family: "AlbertSans-ExtraBold";
 }
 
