--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -319,9 +319,10 @@ header {
 	ul{
 		text-align: center;
 		color: #ffffff;
+		font-size: 14px;
 		li{
-			padding-top: 0.5rem;
-			padding-bottom: 0.5rem;
+			padding-top: 0.3rem;
+			padding-bottom: 0.3rem;
 			font-family: $albert-extra-bold;
 		}
 	}
