--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -319,7 +319,8 @@ header {
   color: #ffffff;
   font-size: 14px;
 }
-#header ul li a:hover {
+#header ul li a:hover,
+#header ul li a.current {
   color: #ff2b59;
 }
 
