--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -326,7 +326,8 @@ header {
 				color: #ffffff;
 				font-size: 14px;	
 			}
-			a:hover{
+			a:hover,
+			a.current{
 				color: #ff2b59;
 			}
 		}
