--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -311,6 +311,20 @@ header {
   color: #EBE2D0;
   font-size: 2rem;
 }
+#header #mobile-menu {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #1b1b1b;
+}
+#header #mobile-menu a {
+  color: #ffffff;
+  font-size: 14px;
+}
+#header #mobile-menu a:hover,
+#header #mobile-menu a.current {
+  color: #ff2b59;
+}
 #header ul {
   text-align: center;
 }
