--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -320,6 +320,20 @@ header {
 		color: #EBE2D0;
 		font-size: 2rem;
 	}
+	#mobile-menu{
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		background-color: #1b1b1b;
+		a{
+			color: #ffffff;
+			font-size: 14px;	
+		}
+		a:hover,
+		a.current{
+			color: #ff2b59;
+		}
+	}
 	ul{
 		text-align: center;
 		li{
