--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -324,6 +324,7 @@ header {
 		position: fixed;
 		width: 100%;
 		height: 100%;
+		top: 0;
 		background-color: #1b1b1b;
 		ul{
 			text-align: center;
@@ -662,6 +663,7 @@ footer {
 	width: 60px;
 	z-index: 10;
 	rotate: -90deg;
+	z-index: 2;
 }
 
 
