--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -329,6 +329,9 @@ header {
 		ul{
 			text-align: center;
 			li{
+				padding-top: 0.3rem;
+				padding-bottom: 0.3rem;
+				font-family: $albert-extra-bold;
 				a{
 					color: #ffffff;
 					font-size: 14px;	
