--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -326,6 +326,11 @@ header {
 		height: 100%;
 		top: 0;
 		background-color: #1b1b1b;
+		i{
+			position: absolute;
+			top: 3rem;
+			left: 3rem
+		}
 		ul{
 			text-align: center;
 			li{
