--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -320,6 +320,10 @@ header {
 		color: #EBE2D0;
 		font-size: 2rem;
 	}
+	#hamburger-icon{
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 	#mobile-menu{
 		position: fixed;
 		width: 100%;
@@ -328,8 +332,8 @@ header {
 		background-color: #1b1b1b;
 		i{
 			position: absolute;
-			top: 3rem;
-			left: 3rem
+			top: 1rem;
+			left: 1rem;
 		}
 		ul{
 			text-align: center;
