--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -323,6 +323,10 @@ header {
   transform: translateX(-100%);
 }
 
+//lock scroll
+body.no-scroll {
+  overflow: hidden;
+}
 
 #header{
 	i{
@@ -339,6 +343,8 @@ header {
 		height: 100%;
 		top: 0;
 		background-color: #1b1b1b;
+		transform: translateX(-100%);
+  		transition: transform 0.3s ease-in-out;
 		i{
 			position: absolute;
 			top: 1rem;
