--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -315,6 +315,10 @@ header {
   transform: translateX(-100%);
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 #header i {
   color: #EBE2D0;
   font-size: 2rem;
@@ -329,6 +333,8 @@ header {
   height: 100%;
   top: 0;
   background-color: #1b1b1b;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
 }
 #header #mobile-menu i {
   position: absolute;
