--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -383,10 +383,10 @@ body.no-scroll {
 					}
 				}
 			}
+		}
 
-			&.menu-dark .menu-link {
-				color: #272727;
-			}
+		.menu-dark{
+			color: #272727;
 		}
 	}
 }
