--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -365,30 +365,29 @@ body.no-scroll {
 			}
 		}
 	}
-	#desktop-menu{
+	#desktop-menu {
 		ul {
 			text-align: center;
-
 			li {
 				padding: 0.3rem 0;
 				font-family: $albert-extra-bold;
 
 				a.menu-link {
 					font-size: 14px;
-					color: white;          
+					color: white;  
 					transition: color 0.3s;
 
 					&:hover {
-						color: #ff2b59;        
+						color: #ff2b59;     
 					}
 				}
 			}
+			&.menu-dark .menu-link {
+				color: #272727;
+			}
 		}
 	}
-}
 
-.menu-dark{
-	color: #272727 !important;
 }
 
 #home {
