--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -382,9 +382,9 @@ body.no-scroll {
 					}
 				}
 			}
-			&.menu-dark .menu-link {
-				color: #272727;
-			}
+		}
+		.menu-dark {
+			color: #272727;
 		}
 	}
 
