--- a/inc/assets/css/custom_style.css
+++ b/inc/assets/css/custom_style.css
@@ -370,7 +370,7 @@ body.no-scroll {
 #header #desktop-menu ul li a.menu-link:hover {
   color: #ff2b59;
 }
-#header #desktop-menu ul.menu-dark .menu-link {
+#header #desktop-menu .menu-dark {
   color: #272727;
 }
 
